--- a/example/tree.html
+++ b/example/tree.html
@@ -8,8 +8,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/tree.css">
-
+	<link rel="stylesheet" href="../src/css/tree.css">
 </head>
 
 <div id="container">
@@ -19,3 +18,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="../src/js/tree.js"></script>
+<script src="../src/js/load_data.js"></script>
+<script src="js/example.js"></script>
+
