--- a/example/tree.html
+++ b/example/tree.html
@@ -11,10 +11,10 @@
 	<link rel="stylesheet" href="../src/css/tree.css">
 </head>
 
+<div id="summary">
 <div id="container">
-
 </div>
-
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="../src/js/tree.js"></script>
