add css for summary

--- a/example/tree.html
+++ b/example/tree.html
@@ -11,8 +11,10 @@
 	<link rel="stylesheet" href="../src/css/tree.css">
 </head>
 
-<div id="summary">
+<div>
 <div id="container">
+</div>
+<div id="summary">
 </div>
 </div>
 
