--- a/example/cashback.html
+++ b/example/cashback.html
@@ -7,9 +7,8 @@
 <div id="cashback">
 	<span>Доступный кешбэк: </span> 
 </div>
-<button onclick="useCashback1()">Применить1</button>
-<button onclick="useCashback2()">Применить2</button>
-<!-- <button onclick="useCashback()">Применить</button> -->
+
+<button onclick="useCashback()">Применить</button>
 
 <!-- <div id="summary">
 </div> -->
