update visible data from external script

--- a/example/cashback.html
+++ b/example/cashback.html
@@ -6,9 +6,10 @@
 <div>
 <div id="cashback">
 	<div id="rowId" style="display: none;">
+		<span id="rowId_value">0</span>
 	</div>
-
 	<span>Доступный кешбэк: </span> 
+	<span id="cashback_value">0</span><span>руб.</span>
 </div>
 
 <button onclick="useCashback()">Применить</button>
