fix some calculations, recognise inputs

--- a/example/cashback.html
+++ b/example/cashback.html
@@ -8,8 +8,13 @@
 	<div id="rowId" style="display: none;">
 		<span id="rowId_value">0</span>
 	</div>
+	<div id="spended" style="display: none;">
+		<span id="spended_value">0</span>
+	</div>
 	<span>Доступный кешбэк: </span> 
-	<span id="cashback_value">0</span><span>руб.</span>
+	<input type="text" id="cashback_value" value=0></input>
+<!-- 	<span id="cashback_value">0</span><span>руб.</span>
+ -->
 </div>
 
 <button onclick="useCashback()">Применить</button>
