--- a/example/tree.html
+++ b/example/tree.html
@@ -21,5 +21,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="../src/js/tree.js"></script>
 <script src="../src/js/load_data.js"></script>
-<script src="js/example.js"></script>
+<script src="js/tree_example.js"></script>
 
