--- a/example/tree.html
+++ b/example/tree.html
@@ -7,18 +7,28 @@
 
 
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../src/css/tree.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../src/css/tree.css">
 </head>
 
 <div>
-<div id="container">
-</div>
-<div id="summary">
-</div>
+    <div id="container">
+    </div>
+    <div id="summary">
+    </div>
+    <button id="report">
+        push me
+    </button>
+
+
+    <button id="personal_report">
+        push me!
+    </button>
+    <!-- <p><a href="http" download="renamed.csv">click me</a></p> -->
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="../src/js/json2csv.js"></script>
 <script src="../src/js/tree.js"></script>
 <script src="../src/js/load_data.js"></script>
 <script src="js/tree_example.js"></script>
