--- a/example/accounting.html
+++ b/example/accounting.html
@@ -12,16 +12,11 @@
         push me
     </button>
 
-
-    <button id="personal_report">
-        push me!
-    </button>
-    <!-- <p><a href="http" download="renamed.csv">click me</a></p> -->
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="../src/js/json2csv.js"></script>
 <script src="../src/js/tree.js"></script>
 <script src="../src/js/load_data.js"></script>
-<script src="js/tree_example.js"></script>
+<script src="js/accounting_example.js"></script>
 
