add ability to set cashback into radiobutton

--- a/example/cashback.html
+++ b/example/cashback.html
@@ -13,6 +13,19 @@
 	</div>
 	<span>Доступный кешбэк: </span> 
 	<input type="text" id="cashback_value" value=0></input>
+	<div class="t-input-group t-input-group_rd" data-input-lid="1645901383097">
+		<div class="t-input-title t-descr t-descr_md" data-redactor-toolbar="no" field="li_title__1645901383097" style="">Применить скидку</div>
+		<div class="t-input-block">
+	    	<div class="t-radio__wrapper">
+	            <label class="t-radio__control t-text t-text_xs" style=""><input type="radio" name="discountOption" value="нет" checked="checked" class="t-radio js-tilda-rule" data-tilda-req="1"><div class="t-radio__indicator"></div>нет</label>
+	            <label class="t-radio__control t-text t-text_xs" style=""><input type="radio" name="discountOption" value="кешбэк" class="t-radio js-tilda-rule" data-tilda-req="1"><div class="t-radio__indicator"></div>кешбэк</label>
+	            <label class="t-radio__control t-text t-text_xs" style=""><input type="radio" name="discountOption" value="акция" class="t-radio js-tilda-rule" data-tilda-req="1"><div class="t-radio__indicator"></div>акция</label>
+	            <label class="t-radio__control t-text t-text_xs" style=""><input type="radio" name="discountOption" value="кешбэк + акция" class="t-radio js-tilda-rule" data-tilda-req="1"><div class="  t-radio__indicator"></div>кешбэк + акция</label>
+	         </div>
+	    	<div class="t-input-error"></div>
+	    </div>
+	</div>
+
 <!-- 	<span id="cashback_value">0</span><span>руб.</span>
  -->
 </div>
